<resources>
    <string name="app_name">MVVM Example</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_page">Main page</string>
    <string name="enter_data_hint">enter data</string>
    <string name="enter_but_text">Enter</string>
    <string name="details_page">Details page</string>
    <string name="out_data_str">Out data:</string>
    <string name="back_but_text">Back</string>
</resources>